--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
     </head>
     <body>
         <header>
+            <div class="container">
+                <div class="row display_flex space_between">
+                    <div class="col">
+                    
+                    </div>
+                    <div class="col">
 
+                    </div>
+                </div>
+            </div>
         </header>
         <main>
 
