--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>DropBox</title>
         <link rel="stylesheet" href="./style/style.css">
+        <script src="https://kit.fontawesome.com/200b75a9a1.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <header>
-            <div class="container">
+            <div class="container_full">
                 <div class="row display_flex space_between">
                     <div class="col">
                     
@@ -21,7 +22,28 @@
             </div>
         </header>
         <main>
-
+            <!-- jumbotron section -->
+            <section id="jumbotron">
+                <div class="container_1180p">
+                    <div class="row">
+                        <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+                    </div>
+                    <div class="row display_flex">
+                        <div class="col_33">
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus, ex explicabo vel, porro quis voluptatibus quidem quibusdam optio sequi eos doloribus excepturi eaque ratione veritatis vero deleniti cum. Eligendi, ad.</p>
+                            <a href="">Inizia la tua prova gratuita</a>
+                            <p>Annulla in qualsiasi momento</p>
+                            <a href="">
+                                <i aria-hidden="true" class="fa-solid fa-arrow-down"></i>
+                            </a>
+                        </div>
+                        <div class="col_67">
+                            <img src="./img/jumbo.png" alt="" class="w_100">
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- end jumbotron section -->
         </main>
         <footer>
             
