added business plan section block layout

--- a/index.html
+++ b/index.html
@@ -44,6 +44,23 @@
                 </div>
             </section>
             <!-- end jumbotron section -->
+            <!-- business plan section -->
+            <section id="business_plan">
+                <div class="container_1000p">
+                    <div class="row">
+                        <div class="col_100"></div>
+                    </div>
+                    <div class="row display_flex space_between">
+                        <div class="col_30"></div>
+                        <div class="col_30"></div>
+                        <div class="col_30"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col_100"></div>
+                    </div>
+                </div>
+            </section>
+            <!-- end business plan section -->
         </main>
         <footer>
             
