added block layout partner+business

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <div class="col_33">
                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus, ex explicabo vel, porro quis voluptatibus quidem quibusdam optio sequi eos doloribus excepturi eaque ratione veritatis vero deleniti cum. Eligendi, ad.</p>
                             <a href="">Inizia la tua prova gratuita</a>
-                            <p>Annulla in qualsiasi momento</p>
+                            <span>Annulla in qualsiasi momento</span>
                             <a href="">
                                 <i aria-hidden="true" class="fa-solid fa-arrow-down"></i>
                             </a>
@@ -61,6 +61,67 @@
                 </div>
             </section>
             <!-- end business plan section -->
+            <!-- contact partner section -->
+            <section id="contact_partner">
+                <div class="container_1000p">
+                    <div class="row display_flex">
+                        <div class="col_60">
+                            <img src="./img/partner.png" alt="" class="w_100">
+                        </div>
+                        <div class="col_40">
+                            <h3>Entra in contatto con un partner DropBox</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi consectetur atque, deleniti asperiores debitis inventore, deserunt ea sed officiis, quisquam earum? Ab obcaecati maiores accusantium fuga voluptate, debitis voluptates quisquam?</p>
+                            <a href="">Trova un partner</a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- end contact partner section -->
+            <!-- dropbox operations section -->
+            <section id="dropbox_operations">
+                <div class="container_1000p">
+                    <div class="row">
+                        <h2>Esegui più operazioni con Dropbox Business</h2>
+                    </div>
+                    <div class="row display_flex wrap">
+                        <div class="col_30 float_left">
+                            <img src="./img/business-feature-integrations-it.png" alt="" class="w_100">
+                            <h3>Passa di meno da uno strumento all'altro</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam quisquam quod fugiat culpa debitis, animi autem. Enim repellat minima voluptatum dicta harum unde, reprehenderit commodi quod laborum assumenda modi saepe.</p>
+                        </div>
+                        <div class="col_30 float_left">
+                            <img src="./img/business-feature-integrations-it.png" alt="" class="w_100">
+                            <h3>Passa di meno da uno strumento all'altro</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam quisquam quod fugiat culpa debitis, animi autem. Enim repellat minima voluptatum dicta harum unde, reprehenderit commodi quod laborum assumenda modi saepe.</p>
+                        </div>
+                        <div class="col_30 float_left">
+                            <img src="./img/business-feature-integrations-it.png" alt="" class="w_100">
+                            <h3>Passa di meno da uno strumento all'altro</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam quisquam quod fugiat culpa debitis, animi autem. Enim repellat minima voluptatum dicta harum unde, reprehenderit commodi quod laborum assumenda modi saepe.</p>
+                        </div>
+                        <div class="col_30 float_left">
+                            <img src="./img/business-feature-integrations-it.png" alt="" class="w_100">
+                            <h3>Passa di meno da uno strumento all'altro</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam quisquam quod fugiat culpa debitis, animi autem. Enim repellat minima voluptatum dicta harum unde, reprehenderit commodi quod laborum assumenda modi saepe.</p>
+                        </div>
+                        <div class="col_30 float_left">
+                            <img src="./img/business-feature-integrations-it.png" alt="" class="w_100">
+                            <h3>Passa di meno da uno strumento all'altro</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam quisquam quod fugiat culpa debitis, animi autem. Enim repellat minima voluptatum dicta harum unde, reprehenderit commodi quod laborum assumenda modi saepe.</p>
+                        </div>
+                        <div class="col_30 float_left">
+                            <img src="./img/business-feature-integrations-it.png" alt="" class="w_100">
+                            <h3>Passa di meno da uno strumento all'altro</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam quisquam quod fugiat culpa debitis, animi autem. Enim repellat minima voluptatum dicta harum unde, reprehenderit commodi quod laborum assumenda modi saepe.</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <h2>Più di 500.000 team utilizano <br>Dropbox Business</h2>
+                        <span><a href="">Scopri di più sui nostri clienti</a></span>
+                    </div>
+                </div>
+            </section>
+            <!-- end dropbox operations section -->
         </main>
         <footer>
             
