Added layoutblock sec. clients+prova gratuita

--- a/index.html
+++ b/index.html
@@ -122,6 +122,36 @@
                 </div>
             </section>
             <!-- end dropbox operations section -->
+            <!-- Clients section -->
+            <section id="clients">
+                <div class="container_1920p">
+                    <div class="row display_flex">
+                        <div class=".client_col_33_side wrap display_flex_row_reverse">
+                            <div class="col_square_50 float_right">1</div>
+                            <div class="col_square_50 float_right">2</div>
+                            <div class="col_square_50 float_right">3</div>
+                            <div class="col_square_50 float_right">4</div>
+                        </div>
+                        <div class="client_col_33_center">
+                        </div>
+                        <div class=".client_col_33_side display_flex wrap">
+                            <div class="col_square_50 float_left">1</div>
+                            <div class="col_square_50 float_left">2</div>
+                            <div class="col_square_50 float_left">3</div>
+                            <div class="col_square_50 float_left">4</div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- end Clients section -->
+            <!-- prova gratuita section -->
+            <section id="prova_gratuita">
+                <div class="container_1000p display_flex space_between">
+                    <h2 class="special display_inline_block vertical_align_top">Porta Dropbox Business <br> nella tua azienda</h2>
+                    <a href="" class="vertical_align_top">Inizia la tua prova gratuita</a>
+                </div>
+            </section>
+            <!-- end prova gratuita section -->
         </main>
         <footer>
             
