--- a/index.html
+++ b/index.html
@@ -152,9 +152,101 @@
                 </div>
             </section>
             <!-- end prova gratuita section -->
+            <!-- FAQ section -->
+            <section id="faq">
+                <div class="container_1000p">
+                    <h2>Domande frequenti</h2>
+                    <hr>
+                    <div class="display_flex space_between">
+                        <h4 class="display_inline_block">Qual è la differenza tra Dropbox Business Standard e Business Advanced?</h4>
+                        <a href="">
+                            <button><i class="fa-solid fa-angle-down"></i></button>
+                        </a>
+                    </div>
+                    <hr>
+                    <div class="display_flex space_between">
+                        <h4 class="display_inline_block">Qual è la differenza tra Dropbox Business Standard e Business Advanced?</h4>
+                        <a href="">
+                            <button><i class="fa-solid fa-angle-down"></i></button>
+                        </a>
+                    </div>
+                    <hr>
+                    <div class="display_flex space_between">
+                        <h4 class="display_inline_block">Qual è la differenza tra Dropbox Business Standard e Business Advanced?</h4>
+                        <a href="" class="vertical_align_center">
+                            <button class="border_none "><i class="fa-solid fa-angle-down"></i></span></button>
+                        </a>
+                    </div>
+                    <hr>
+                </div>
+            </section>
+            <!-- end FAQ section -->
         </main>
         <footer>
-            
+            <section id="info_e_privacy">
+                <div class="container_1180p">
+                    <div class="spacing_30px"></div>
+                    <div class="row display_flex space_between">
+                        <div class="col_15">
+                            <h3>Dropbox</h3>
+                            <ul>
+                                <li><button>Applicazione desktop</button></li>
+                                <li><a href="">Perchè Dropbox</a></li>
+                                <li><a href="">Piani</a></li>
+                                <li><a href="">Sicurezza</a></li>
+                                <li><a href="">Funzioni</a></li>
+                            </ul>
+                        </div>
+                        <div class="col_15">
+                            <h3>Dropbox</h3>
+                            <ul>
+                                <li><button>Applicazione desktop</button></li>
+                                <li><a href="">Perchè Dropbox</a></li>
+                                <li><a href="">Piani</a></li>
+                                <li><a href="">Sicurezza</a></li>
+                                <li><a href="">Funzioni</a></li>
+                            </ul>
+                        </div>
+                        <div class="col_15">
+                            <h3>Dropbox</h3>
+                            <ul>
+                                <li><button>Applicazione desktop</button></li>
+                                <li><a href="">Perchè Dropbox</a></li>
+                                <li><a href="">Piani</a></li>
+                                <li><a href="">Sicurezza</a></li>
+                                <li><a href="">Funzioni</a></li>
+                            </ul>
+                        </div>
+                        <div class="col_15">
+                            <h3>Dropbox</h3>
+                            <ul>
+                                <li><button>Applicazione desktop</button></li>
+                                <li><a href="">Perchè Dropbox</a></li>
+                                <li><a href="">Piani</a></li>
+                                <li><a href="">Sicurezza</a></li>
+                                <li><a href="">Funzioni</a></li>
+                            </ul>
+                        </div>
+                        <div class="col_15">
+                            <h3>Dropbox</h3>
+                            <ul>
+                                <li><button>Applicazione desktop</button></li>
+                                <li><a href="">Perchè Dropbox</a></li>
+                                <li><a href="">Piani</a></li>
+                                <li><a href="">Sicurezza</a></li>
+                                <li><a href="">Funzioni</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </section>
+            <section id="language">
+                <div class="container_1180p">
+                    <div class="border_line"></div>
+                    <div class="row">
+                        <i class="fa-solid fa-earth-americas"></i> Italiano <i class="fa-solid fa-caret-up"></i>
+                    </div>
+                </div> 
+            </section>
         </footer>
     </body>
 </html>
